syntax = "proto3";
package object;
option go_package = "github.com/nspcc-dev/neofs-proto/object";

import "refs/types.proto";
import "object/types.proto";
import "session/types.proto";
import "service/meta.proto";
import "service/verify.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.stable_marshaler_all) = true;

service Service {
    // Get the object from a container
    rpc Get(GetRequest) returns (stream GetResponse);

    // Put the object into a container
    rpc Put(stream PutRequest) returns (PutResponse);

    // Delete the object from a container
    rpc Delete(DeleteRequest) returns (DeleteResponse);

    // Get MetaInfo
    rpc Head(HeadRequest) returns (HeadResponse);

    // Search by MetaInfo
    rpc Search(SearchRequest) returns (SearchResponse);

    // Get ranges of object payload
    rpc GetRange(GetRangeRequest) returns (GetRangeResponse);

    // Get hashes of object ranges
    rpc GetRangeHash(GetRangeHashRequest) returns (GetRangeHashResponse);
}

message GetRequest {
    refs.Address Address                     = 1 [(gogoproto.nullable) = false];
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message GetResponse {
    oneof R {
        Object object = 1;
        bytes Chunk   = 2;
    }
}

message PutRequest {
    message PutHeader {
        Object Object       = 1;
        session.Token Token = 2;
    }

    oneof R {
        PutHeader Header = 1;
        bytes Chunk      = 2;
    }

    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message PutResponse {
    refs.Address Address = 1 [(gogoproto.nullable) = false];
}
message DeleteRequest {
    refs.Address Address                     = 1 [(gogoproto.nullable) = false];
    bytes OwnerID                            = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "OwnerID"];
    session.Token Token                      = 3;
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}
message DeleteResponse {}

// HeadRequest.FullHeader == true, for fetch all headers
message HeadRequest {
    refs.Address Address                     = 1 [(gogoproto.nullable) = false, (gogoproto.customtype) = "Address"];
    bool FullHeaders                         = 2;
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}
message HeadResponse {
    Object Object = 1;
}

message SearchRequest {
    uint32 Version                           = 1;
    bytes ContainerID                        = 2 [(gogoproto.nullable) = false, (gogoproto.customtype) = "CID"];
    bytes Query                              = 3;
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message SearchResponse {
    repeated refs.Address Addresses = 1 [(gogoproto.nullable) = false];
}

message GetRangeRequest {
    refs.Address Address                     = 1 [(gogoproto.nullable) = false];
    repeated Range Ranges                    = 2 [(gogoproto.nullable) = false];
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message GetRangeResponse {
    repeated bytes Fragments = 1;
}

message GetRangeHashRequest {
    refs.Address Address                     = 1 [(gogoproto.nullable) = false];
    repeated Range Ranges                    = 2 [(gogoproto.nullable) = false];
    bytes Salt                               = 3;
    service.RequestMetaHeader Meta           = 98 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
    service.RequestVerificationHeader Verify = 99 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message GetRangeHashResponse {
    repeated bytes Hashes = 1 [(gogoproto.customtype) = "Hash", (gogoproto.nullable) = false];
}

